<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.stn.pulsa.PenjualanInputActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editTextPenjualanTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPenjualanTanggal"
            android:inputType="none" />

        <EditText
            android:id="@+id/editTextPenjualanNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPenjualanNama" />

        <EditText
            android:id="@+id/editTextPenjualanTelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintTlp"
            android:inputType="none" />

        <EditText
            android:id="@+id/editTextPenjualanKode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPenjualanKode"
            android:inputType="none" />

        <EditText
            android:id="@+id/editTextPenjualanSaldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintSaldo"
            android:inputType="none" />

        <EditText
            android:id="@+id/editTextPenjualanHargaBeli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPenjualanHargaBeli"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editTextPenjualanHargaJual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hintPenjualanHargaJual"
            android:inputType="numberDecimal" />

        <Switch
            android:id="@+id/penjualanStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textOff="Lunas"
            android:textOn="Hutang" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/buttonPenjualanCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCancel" />

        <Button
            android:id="@+id/buttonPenjualanOK"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonOK" />
    </LinearLayout>

</RelativeLayout>