<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="1"
    tools:context="org.stn.pulsa.KasActivity" >

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:padding="3dip"
            android:text="@string/txtPokok"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtKasPokok"
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/txtPokok"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:padding="3dip"
            android:text="@string/hintMargin"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtKasMargin"
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/hintMargin"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:padding="3dip"
            android:text="@string/txtKas"
            android:textColor="#023E88"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtKasKas"
            android:layout_column="1"
            android:gravity="right"
            android:padding="3dip"
            android:text="@string/txtKas"
            android:textColor="#023E88"
            android:textSize="20sp" />
    </TableRow>

</TableLayout>